export enum FuelGrade {
    RON_92, 
    RON_95,
    Diesel
}